--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,110 +8,146 @@
     tools:context="app.gotogether.com.go_together.MyPageActivity">
 
 
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="My Page"
             android:textSize="30dp"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
+            app:layout_constraintHorizontal_bias="0.119"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:layout_width="132dp"
-            android:layout_height="225dp"
-            android:src="@drawable/myImage"
-            tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="69dp"
-            app:layout_constraintRight_toRightOf="@+id/textView"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_constraintTop_creator="1" />
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/textView"
+            android:layout_marginEnd="25dp"
             android:text="(nickname)"
             android:textSize="17dp"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="22dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toRightOf="@+id/textView" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_editor_absoluteX="284dp"
+            tools:layout_editor_absoluteY="16dp" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/nickname"
+            android:layout_below="@+id/nickname"
             android:text="(name)"
             android:textSize="17dp"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="21dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/textView2" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_editor_absoluteX="314dp"
+            tools:layout_editor_absoluteY="37dp" />
+
 
         <CalendarView
 
             android:id="@+id/calendar"
-            android:layout_width="302dp"
-            android:layout_height="274dp"
-            android:layout_weight="1"
+            android:layout_width="268dp"
+            android:layout_height="266dp"
+            android:layout_alignStart="@+id/linearLayout"
 
+            android:layout_below="@+id/linearLayout"
             android:layout_marginRight="41dp"
+            android:layout_marginTop="17dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toTopOf="@+id/scheduleView"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
-            android:layout_marginEnd="41dp"
-            android:layout_marginBottom="16dp" />
+            tools:layout_constraintBottom_creator="1" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="269dp"
+            android:layout_height="64dp"
+            android:layout_below="@+id/name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="75dp"
+            tools:layout_editor_absoluteY="89dp">
+
+            <TextView
+                android:id="@+id/list_view1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="This is schedule1"
+                android:textColor="#666666"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/list_view2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="This is schedule2"
+                android:textColor="#666666"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/list_view3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="This is schedule3"
+                android:textColor="#666666"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/list_view4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="This is schedule4"
+                android:textColor="#666666"
+                android:textSize="13dp" />
+        </LinearLayout>
 
         <CalendarView
 
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:minDate="04/01/2013"
-            android:maxDate="12/31/2013"
             android:focusedMonthDateColor="#ff0000"
-            android:unfocusedMonthDateColor="#0000ff"
+            android:maxDate="12/31/2013"
+            android:minDate="04/01/2013"
             android:selectedWeekBackgroundColor="#ffff00"
             android:showWeekNumber="false"
+            android:unfocusedMonthDateColor="#0000ff"
             android:weekSeparatorLineColor="#00ff00"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintTop_creator="1"
+            android:id="@+id/calendarView" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="TextView"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
-            android:layout_marginStart="41dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="41dp"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="14dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            android:id="@+id/scheduleView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="you can check the date of schedule"
+            android:textColor="#666666"
+            android:textSize="14dp"
+            android:layout_marginBottom="34dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
+    </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
 
 
 
