yeseul - add LoginRequest, RegisterRequest - DB와 서버까지 구현 - users1, Login.php, Register.php

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="42dp" />
 
     <EditText
-        android:id="@+id/etUserName"
+        android:id="@+id/etUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
